src/sass/_pattern_navigation.scss
@import "./breakpoints";

.p-panel__logo {
  margin-top: 0;

  .p-panel__logo-image {
    height: 36px;
    margin-top: -3px;
    max-width: inherit;
  }

  .logo-text {
    color: #fff;
    left: 47px;
    position: absolute;
    top: $spv--x-small;
  }

  @include mobile {
    .logo-text {
      left: 38px;
    }
  }

  @include extra-large {
    .p-panel__logo-image {
      height: 40px;
    }

    .logo-text {
      left: 52px;
    }
  }
}

@include desktop {
  .l-navigation.is-collapsed .logo-text {
    display: none;
  }
}

@include mobile {
  .l-navigation {
    transition-duration: 0s !important;
  }
}

@media screen and (min-width: $breakpoint-x-small) and (max-width: $breakpoint-small - 1px) {
  .l-navigation__drawer {
    width: 17rem;
  }
}

.l-navigation.is-collapsed:focus-within {
  transform: translateX(-100%);
}

@include desktop {
  .l-navigation.is-collapsed,
  .l-navigation.is-collapsed:focus-within,
  .l-navigation.is-collapsed:hover {
    transform: translateX(0);
    width: 4rem;
  }
}

.sidenav-top-ul::after {
  display: none;
}

.sidenav-bottom-ul {
  width: 15rem;
}

.sidenav-toggle {
  background-color: #444 !important;
  left: 12rem;
  position: relative;
}

@media screen and (min-height: 720px) {
  .sidenav-bottom-ul {
    bottom: $spv--x-large;
    position: absolute;
  }

  .sidenav-toggle {
    bottom: $spv--large;
    left: inherit;
    position: absolute;
    right: $sph--large;
  }
}

.l-navigation.is-collapsed .sidenav-toggle {
  left: $sph--large;
  rotate: 180deg;
}

.p-side-navigation__item--title {
  white-space: nowrap;
}

.navigation-hr {
  margin-left: $sph--x-large;
  margin-top: $spv--small;
}

.l-navigation.is-pinned {
  .secondary {
    .p-side-navigation__link {
      padding-left: 5rem;
    }

    .p-side-navigation__icon {
      left: 2.5rem;
    }
  }
}

@include mobile {
  .navigation-hr {
    margin-left: $sph--large;
  }

  .l-navigation.is-pinned {
    .secondary {
      .p-side-navigation__link {
        padding-left: 4.5rem;
      }

      .p-side-navigation__icon {
        left: 2rem;
      }
    }
  }
}

